{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 113,
  "lineage": "c4f480f9-cca4-cc30-05f2-c199a6a53f24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:753404116864:internet-gateway/igw-03c24090d6fd9f891",
            "id": "igw-03c24090d6fd9f891",
            "owner_id": "753404116864",
            "tags": {
              "Name": "node-hello-app-igw"
            },
            "tags_all": {
              "Name": "node-hello-app-igw"
            },
            "vpc_id": "vpc-0c83b171f57394263"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:753404116864:route-table/rtb-0fc1126ea87bb9d26",
            "id": "rtb-0fc1126ea87bb9d26",
            "owner_id": "753404116864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c24090d6fd9f891",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "node-hello-app-public-rt"
            },
            "tags_all": {
              "Name": "node-hello-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83b171f57394263"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c228f1c051e9b56e",
            "route_table_id": "rtb-0fc1126ea87bb9d26",
            "subnet_id": "subnet-09ed82424ca60c1a9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045e7177a822152ca",
            "route_table_id": "rtb-0fc1126ea87bb9d26",
            "subnet_id": "subnet-058a25dcfbc2ac985"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:753404116864:security-group/sg-04180b71179e3ba5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04180b71179e3ba5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "node-hello-app-ecs-tasks20250929081238511900000002",
            "name_prefix": "node-hello-app-ecs-tasks",
            "owner_id": "753404116864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-hello-app-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "node-hello-app-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83b171f57394263"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:753404116864:subnet/subnet-09ed82424ca60c1a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed82424ca60c1a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "753404116864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "node-hello-app-public-subnet-1"
            },
            "tags_all": {
              "Name": "node-hello-app-public-subnet-1"
            },
            "vpc_id": "vpc-0c83b171f57394263"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:753404116864:subnet/subnet-058a25dcfbc2ac985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a25dcfbc2ac985",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "753404116864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "node-hello-app-public-subnet-2"
            },
            "tags_all": {
              "Name": "node-hello-app-public-subnet-2"
            },
            "vpc_id": "vpc-0c83b171f57394263"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:753404116864:vpc/vpc-0c83b171f57394263",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b43f2500fabc9224",
            "default_route_table_id": "rtb-0121a227778f93158",
            "default_security_group_id": "sg-0747932f6a0ab1ed9",
            "dhcp_options_id": "dopt-024ca2333b31ed4fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c83b171f57394263",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0121a227778f93158",
            "owner_id": "753404116864",
            "tags": {
              "Name": "node-hello-app-vpc"
            },
            "tags_all": {
              "Name": "node-hello-app-vpc"
            }
          }
        }
      ]
    }
  ]
}